[package]
name = "arcana-launcher"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
eframe = "0.18.0"
log = "0.4.17"
octocrab = "0.16.0"
pretty_env_logger = "0.4.0"
reqwest = "0.11.11"
tokio = { version="1.19.2", features = [ "full" ]}
zip = "0.6.2"
